# satysfi-base

./: .gitignore  LICENSE  README.md  Satyristes  array.satyg  assoc.satyg  base.satyg  base0.satyg  block.satyh  char.satyg  color-ext.satyg  color-ext.satyh  color2.satyh  context.satyh  debug.satyg  either.satyg  eq.satyg  equal.satyg  error.satyg  float.satyg  fn.satyg  format.satyg  graphics.satyg  graphics.satyh  image.satyh  inline.satyh  int.satyg  itemize2.satyh  lazy.satyg  lazy0.satyg  length.satyg  lexer.satyg  list-ext.satyg  list2.satyg  map.satyg  option-ext.satyg  option2.satyg  ord.satyg  package.json  pager.satyh  (+21 more)
.github/workflows/: ci.yml  test.yml
__test__/: README.md  derive-derive.saty  regression.test.js  render.test.js  stdja.saty
__test__/__snapshots__/: regression.test.js.snap
__test__/satysrc/: generic.saty  generic.test.saty  satysfi-it.saty  satysfi-it.satysfi-lock  test.saty  util.satyh
__test__/satysrc/derive/: 01-derive.saty  02-assume.saty  03-by.saty  04-by-and-byop.saty  05-from.saty  06-dotted-line.saty  07-customized-config.saty  07-customized-config.satysfi-lock
__test__/src/derive/: assume.saty  by.saty  derive.saty
bug/: bug.saty  bug0.satyg
scripts/: make-changelog.js  release.js  utils.js
src/: array.satyg  base.satyg  base0.satyg  base1.satyg  big-int.satyg  block.satyh  bool.satyg  char.satyg  color-ext.satyg  color.satyg  context.satyh  cross-ref.satyg  cross-ref.satyh  debug.satyg  either.satyg  eq.satyg  float.satyg  fn.satyg  font.satyh  format.satyg  graphics.satyh  image.satyh  inline.satyh  int.satyg  length.satyg  lexer.satyg  list-ext.satyg  map.satyg  option-ext.satyg  option.satyg  ord.satyg  page.satyh  pager.satyh  parser.satyg  path.satyh  promise.satyg  random.satyg  ref.satyg  regexp.satyg  result.satyg  (+10 more)
src/__sub__/: base-sub.satyg  base-sub.satyh  util-sub.satyg  util-sub.satyh
src/typeset/: base.satyh  code2.satyh  derive-dsl.satyh  derive.satyh  font.satyh  itemize2.satyh  lexer.satyh  listing-design-fun.satyh  math-ext.satyh  satysfi-it.satyh  tabular2.satyh  v-deco-set.satyh
src/typeset/derive/: ast.satyh  config.satyg  line.satyh  render.satyh
src/zrbase/: .gitignore  Makefile  README.md  satysfi-zrbase.opam  znum0.satyh  zp0.satyh  zrandom0.satyh  zrbase0.satyh
src/zrbase/etc/: zrbase0-template.satyg
t/: expected  satysfi-it.saty  test.saty
test/: array.test.satyg  big-int.test.satyg  bool.test.satyg  color.test.satyg  float.test.satyg  fn.test.satyg  int.test.satyg  lexer.test.satyg  list.test.satyg  main.test.saty  map.test.satyg  parser.test.satyg  promise.test.satyg  ref.test.satyg  regex.test.satyg  run-test.sh  stream.test.satyg  string.test.satyg  treemap.test.satyg  treeset.test.satyg
typeset/: base.satyh  code2.satyh  derive-dsl.satyh  derive.satyh  font.satyh  math-ext.satyh  satysfi-it.satyh  stdjareport-blockless.satyh
typeset/derive/: ast.satyh  config.satyg  line.satyh  render.satyh
zrbase/: zexn0.satyh  zfmt0.satyh  zl0.satyh  zlist0.satyh  zlog0.satyh  zmtdoc0.satyh  zp0.satyh  zresult0.satyh  zs0.satyh
