opam-version: "2.0"
name: "satysfi-base"
version: "1.4.0"
synopsis: "A collection of utility functions and modules for SATySFi"
description: """
This is a collection of utility functions and modules for SATySFi. Because the library bundled with the default installation configuration of SATySFi is currently not rich enough, this project aims to provide a complementary library sufficient for most situations in typesetting.

this requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Yuichi Nishiwaki <yuichi.nishiwaki@gmail.com>"
authors: [
  "Yuichi Nishiwaki <yuichi.nishiwaki@gmail.com>"
  "puripuri2100 <puripuri2100@gmail.com>"
  "Yuito Murase <yuito.murase@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/nyuichi/satysfi-base"
bug-reports: "https://github.com/nyuichi/satysfi-base/issues"
dev-repo: "git+https://github.com/nyuichi/satysfi-base.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.8"}
  "satysfi-dist"
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-fonts-dejavu" {>= "2.37"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "base"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
