opam-version: "2.0"
name: "satysfi-lib"
version: "0.0.1"
synopsis: "A collection of utility functions and modules for SATySFi"
description: """
This is a collection of utility functions and modules for SATySFi. Because the library bundled with the default installation configuration of SATySFi is currently not rich enough, this project aims to provide a complementary library sufficient for most situations in typesetting.

this requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Yuichi Nishiwaki <yuichi.nishiwaki@gmail.com>"
authors: [
  "Yuichi Nishiwaki <yuichi.nishiwaki@gmail.com>"
  "puripuri2100 <puripuri2100@gmail.com>"
  "Yuito Murase <yuito.murase@gmail.com>"
]
license: "UNLICENSED"
homepage: "https://github.com/nyuichi/satysfi-lib"
bug-reports: "https://github.com/nyuichi/satysfi-lib/issues"
dev-repo: "git+https://github.com/nyuichi/satysfi-lib.git"
depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "lib"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
